{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 119,
  "lineage": "0ef80e52-c6c4-8ba0-e27d-93480cab322d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ui-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:948519132789:loadbalancer/app/ui-alb/e76773396c6a03f5",
            "arn_suffix": "app/ui-alb/e76773396c6a03f5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ui-alb-1696128901.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:948519132789:loadbalancer/app/ui-alb/e76773396c6a03f5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ui-alb",
            "security_groups": [
              "sg-0daadc0bd9506b4dd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0033415ac4c7e4a79"
              },
              {
                "subnet_id": "subnet-062c61fd688d9e040"
              }
            ],
            "subnets": [
              "subnet-0033415ac4c7e4a79",
              "subnet-062c61fd688d9e040"
            ],
            "tags": {
              "Name": "ui-load-balancer"
            },
            "tags_all": {
              "Name": "ui-load-balancer"
            },
            "vpc_id": "vpc-0a6768a3825009403",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow-http",
            "aws_subnet.public-subnet-rizal-1a",
            "aws_subnet.public-subnet-rizal-1b",
            "aws_vpc.vpc-rizal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ui-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:948519132789:listener/app/ui-alb/e76773396c6a03f5/04c1bb7c50050bd0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:948519132789:targetgroup/ui/9ad621ce79ef104a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:948519132789:listener/app/ui-alb/e76773396c6a03f5/04c1bb7c50050bd0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:948519132789:loadbalancer/app/ui-alb/e76773396c6a03f5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.ui-alb",
            "aws_alb_target_group.ui-target",
            "aws_security_group.allow-http",
            "aws_subnet.public-subnet-rizal-1a",
            "aws_subnet.public-subnet-rizal-1b",
            "aws_vpc.vpc-rizal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ui-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:948519132789:targetgroup/ui/9ad621ce79ef104a",
            "arn_suffix": "targetgroup/ui/9ad621ce79ef104a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:948519132789:targetgroup/ui/9ad621ce79ef104a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ui",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a6768a3825009403"
          },
          "dependencies": [
            "aws_vpc.vpc-rizal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "target-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:948519132789:targetgroup/ui/9ad621ce79ef104a-20230430182016068300000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:948519132789:targetgroup/ui/9ad621ce79ef104a",
            "target_id": "i-05281f82707a0ab55"
          },
          "dependencies": [
            "aws_alb_target_group.ui-target",
            "aws_instance.ec2_ui",
            "aws_security_group.allow-http",
            "aws_security_group.sshAccess",
            "aws_subnet.public-subnet-rizal-1a",
            "aws_vpc.vpc-rizal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:948519132789:instance/i-05281f82707a0ab55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05281f82707a0ab55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "masterConnectKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f60e00c8e07d8c33",
            "private_dns": "ip-10-0-0-68.ec2.internal",
            "private_ip": "10.0.0.68",
            "public_ip": "54.164.148.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d2c3b7dd215dae48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-040d410cd8ca17754",
              "sg-0daadc0bd9506b4dd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062c61fd688d9e040",
            "tags": {
              "Name": "ui-webserver"
            },
            "tags_all": {
              "Name": "ui-webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040d410cd8ca17754",
              "sg-0daadc0bd9506b4dd"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-http",
            "aws_security_group.sshAccess",
            "aws_subnet.public-subnet-rizal-1a",
            "aws_vpc.vpc-rizal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway-rizal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948519132789:internet-gateway/igw-060457d88741fed2e",
            "id": "igw-060457d88741fed2e",
            "owner_id": "948519132789",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-0a6768a3825009403"
          },
          "dependencies": [
            "aws_vpc.vpc-rizal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a606889409c65c7e",
            "original_route_table_id": "rtb-03fdea6f8f481dd44",
            "route_table_id": "rtb-0641d07471a1dab09",
            "vpc_id": "vpc-0a6768a3825009403"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway-rizal",
            "aws_route_table.routeTable_rizal",
            "aws_vpc.vpc-rizal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routeTable_rizal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948519132789:route-table/rtb-0641d07471a1dab09",
            "id": "rtb-0641d07471a1dab09",
            "owner_id": "948519132789",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060457d88741fed2e",
                "instance_id": "",
                "ipv6_cidr_block": "::0/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060457d88741fed2e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-Table"
            },
            "tags_all": {
              "Name": "Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6768a3825009403"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway-rizal",
            "aws_vpc.vpc-rizal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948519132789:security-group/sg-0daadc0bd9506b4dd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0daadc0bd9506b4dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_80",
            "name_prefix": "",
            "owner_id": "948519132789",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tcp"
            },
            "tags_all": {
              "Name": "allow_tcp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6768a3825009403"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-rizal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sshAccess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948519132789:security-group/sg-040d410cd8ca17754",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-040d410cd8ca17754",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "948519132789",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6768a3825009403"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-rizal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-rizal-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948519132789:subnet/subnet-062c61fd688d9e040",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062c61fd688d9e040",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948519132789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a6768a3825009403"
          },
          "dependencies": [
            "aws_vpc.vpc-rizal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-rizal-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948519132789:subnet/subnet-0033415ac4c7e4a79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0033415ac4c7e4a79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948519132789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a6768a3825009403"
          },
          "dependencies": [
            "aws_vpc.vpc-rizal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-rizal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948519132789:vpc/vpc-0a6768a3825009403",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-027150eb7a7a39520",
            "default_route_table_id": "rtb-03fdea6f8f481dd44",
            "default_security_group_id": "sg-063a8527d98f26a62",
            "dhcp_options_id": "dopt-0e4b52a8bad2b39b4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a6768a3825009403",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03fdea6f8f481dd44",
            "owner_id": "948519132789",
            "tags": {
              "Name": "vpc-rizal"
            },
            "tags_all": {
              "Name": "vpc-rizal"
            }
          }
        }
      ]
    }
  ]
}